# joget-form-generator

./: .flake8  .gitignore  CLAUDE.md  ENTERPRISE_FIELDS.md  README.md  coverage.xml  pyproject.toml
.github/workflows/: test.yml
docs/: AJAX_SUBFORM_PATTERN.md  API_REFERENCE.md  NESTED_LOV_REFACTORING_PATTERN.md  PATTERN_DEVELOPMENT_GUIDE.md  USER_GUIDE.md  YAML_SPECIFICATION.md  claude_desktop_config.example.json
examples/: enterprise_showcase.yaml  phase2_showcase.yaml  phase3_options_sources.yaml  sample_form.yaml
examples/mdm/: md01maritalStatus.yaml  md25equipment.yaml
sample-forms/: README.md
sample-forms/01_nested_lovs/: JOGET_NESTED_LOV_GUIDE.md  lov1.json  lov2.json  x100Test.json
sample-forms/02_master_details/: sample-form.json  sample-line-form.json
sample-forms/03_tabs/: tab1-form.json  tab2-form.json  tabs-form.json
sample-forms/04_farmer-application-form/: f01.03.json  f01.05-1.json  f01.05-2.json  f01.05.json  f01.07.json
sample-forms/05_ajax-subform/: parent-form-x2.json  subform-x1.json
scripts/: deploy_test_forms.py  generate_models.py
specs/: README.md
specs/existing-farmer/output/: f01-main.json  f01.01.json  f01.02.json  f01.04-1.json  f01.04.json  f01.05-1.json  f01.05-2.json  f01.06.json
specs/existing-mdm/: README.md
specs/existing-mdm/data/: md01maritalStatus.csv  md02language.csv  md03district.csv  md04agroEcologicalZone.csv  md05residencyType.csv  md06farmLabourSource.csv  md07livelihoodSource.csv  md08educationLevel.csv  md09infoSource.csv  md10conservationPractice.csv  md11hazard.csv  md12relationship.csv  md13orphanhoodStatus.csv  md14disabilityStatus.csv  md15areaUnits.csv  md16.1livestockCategory.csv  md16livestockType.csv  md17incomeSource.csv  md18registrationChannel.csv  md19.1cropCategory.csv  md19crops.csv  md20supportProgram.csv  md21programType.csv  md22applicationStatus.csv  md23documentType.csv  md24paymentMethod.csv  md25equipmentCategory.csv  md27inputType.csv  (+12 more)
specs/imm/: CLAUDE_CODE_PROMPT.md  IMM_AJAX_SUBFORM_CONFIG.md  IMM_DESIGN_DOCUMENT.md  IMM_FORM_RELATIONSHIPS.md
src/joget_form_generator/: __init__.py  validators.py
src/joget_form_mcp/: README.md  __init__.py  cli.py  server.py
tests/integration/: __init__.py  test_mdm_forms.py
tests/mcp/: test_discovery.py  test_generation.py  test_specification.py  test_validation.py
tests/patterns/: test_calculation_field.py  test_check_box.py  test_custom_html.py  test_date_picker.py  test_file_upload.py  test_form_grid.py  test_grid.py  test_hidden_field.py  test_id_generator.py  test_mixins.py  test_multi_paged_form.py  test_password_field.py  test_radio.py  test_rich_text_editor.py  test_select_box.py  test_subform.py  test_text_area.py  test_text_field.py
tests/schema/: test_validator.py
tests/transformers/: test_normalizer.py
(+157 files in other folders)
